# units

./: CMakeLists.txt  LICENSE  README.md  conanfile.txt
CMakeModules/: unitsGenerateReadmeTest.cmake
include/math/: constants.hpp
include/units/: angular.hpp  constants.hpp  core_types.hpp  digital.hpp  dpi.hpp  linear.hpp  prefixes.hpp  scales.hpp  stream_format.hpp  string_conversions.hpp  strings.hpp  temporal.hpp  unit.hpp  units.hpp
include/units/core/: by.hpp  constants.hpp  define_unit.hpp  operators.hpp  per.hpp  ratio.hpp  scales.hpp  stream_format.hpp  strings.hpp  unit.hpp  units.hpp
include/units/core/internal/: conversion.hpp  convert.hpp  convertible.hpp  core_type_detection.hpp  core_types.hpp  linear_relation.hpp  narrow.hpp  reduce.hpp  scale.hpp  traits_utils.hpp  unit_list.hpp  utils.hpp
include/units/internal/: by.hpp  constants.hpp  core_types.hpp  per.hpp  ratio.hpp  reduce.hpp  traits_utils.hpp  unit.hpp
include/units/stringify/: ostream.hpp  to_string.hpp
tests/: CMakeLists.txt  GenerateReadmeTest.cmake
tests/compile/: CMakeLists.txt  implicit_storage_conversion.cpp  per_conversion.cpp  ratio_conversion.cpp
tests/compile/fail/: incompatible_unit_conversion.cpp
tests/compile/pass/: mult_div_promotion.cpp  ratio_conversion.cpp
tests/suites/: CMakeLists.txt  angular.cpp  core_type_detection.cpp  custom_unit.cpp  custom_unit.hpp  custom_value_type.cpp  custom_value_type.hpp  digital.cpp  linear_imperial.cpp  linear_metric.cpp  linear_nautical.cpp  ratio.cpp  readme_tests.cpp.in  temporal.cpp
tests/test_utils/: CMakeLists.txt
tests/test_utils/include/: main.hpp
tests/test_utils/src/: main.cpp
tests/unit_tests/: angular.cpp  centimeters_to_inches.cpp  inches_to_centimeters.cpp  linear_imperial.cpp  linear_metric.cpp  linear_nautical.cpp  readme_tests.cpp.in  temporal.cpp  unit_tests.cpp
tests/unit_tests/src/: unit_tests.cpp
